--- a/package.json
+++ b/package.json
@@ -16,20 +16,27 @@
   "author": "Aaron Kaczmarek <aaronmichaelmusic@gmail.com>",
   "license": "ISC",
   "options": {
-    "mocha": "--compilers js:babel-register --recursive"
+    "mocha": "--compilers js:babel-register -r mock-local-storage --recursive"
   },
   "bugs": {
     "url": "https://github.com/dieseljobs/thelhc-redux-auth/issues"
   },
   "homepage": "https://github.com/dieseljobs/thelhc-redux-auth#readme",
   "devDependencies": {
+    "axios": "^0.16.2",
+    "axios-mock-adapter": "^1.8.1",
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "enzyme": "^2.8.2",
     "expect": "^1.20.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "mock-local-storage": "^1.0.2",
+    "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0"
   },
   "dependencies": {
     "immutability-helper": "^2.1.2",
