--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Aaron Kaczmarek <aaronmichaelmusic@gmail.com>",
   "license": "ISC",
   "options": {
-    "mocha": "--compilers js:babel-register -r mock-local-storage --recursive"
+    "mocha": "--compilers js:babel-register -r mock-local-storage -r jsdom-global/register --recursive"
   },
   "bugs": {
     "url": "https://github.com/dieseljobs/thelhc-redux-auth/issues"
@@ -30,12 +30,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "enzyme": "^2.8.2",
     "expect": "^1.20.2",
+    "jsdom": "^11.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.3",
+    "redux-observers": "^2.0.2",
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
