--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.16.2",
     "axios-mock-adapter": "^1.8.1",
     "babel-cli": "^6.24.1",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
