--- a/package.json
+++ b/package.json
@@ -31,20 +31,28 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
     "expect": "^1.20.2",
     "jsdom": "^11.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
-    "redux": "^3.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "redux-mock-store": "^1.2.3",
     "redux-observers": "^2.0.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sinon": "^4.1.2"
   },
   "dependencies": {
     "immutability-helper": "^2.1.2",
     "lhc-js-lib": "^1.5.0",
     "path-to-regexp": "^1.7.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.6.0",
     "redux-observers": "^2.0.1",
     "reselect": "^3.0.0"
   }
