--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.3.0",
   "description": "TheLHC custom user authorization integration for redux",
   "main": "dist/index.js",
+  "sideEffects": false,
   "scripts": {
     "compile": "babel -d dist/ src/",
     "prepublish": "npm run test && npm run compile",
@@ -25,20 +26,19 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "axios-mock-adapter": "^1.8.1",
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
+    "babel-register": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "expect": "^1.20.2",
-    "jsdom": "^11.0.0",
+    "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "mock-local-storage": "^1.0.2",
-    "react-addons-test-utils": "^15.6.2",
     "redux-mock-store": "^1.2.3",
     "redux-observers": "^2.0.2",
     "redux-thunk": "^2.2.0",
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "immutability-helper": "^2.1.2",
-    "lhc-js-lib": "^1.5.3",
+    "lhc-js-lib": "^2.2.2",
     "path-to-regexp": "^1.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
