--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "sideEffects": false,
   "scripts": {
     "compile": "babel -d dist/ src/",
-    "prepublish": "npm run test && npm run compile",
-    "test": "mocha $npm_package_options_mocha",
+    "test": "jest --color=true",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
@@ -16,9 +15,6 @@
   },
   "author": "Aaron Kaczmarek <aaronmichaelmusic@gmail.com>",
   "license": "ISC",
-  "options": {
-    "mocha": "--compilers js:babel-register -r mock-local-storage -r jsdom-global/register --recursive"
-  },
   "bugs": {
     "url": "https://github.com/dieseljobs/thelhc-redux-auth/issues"
   },
@@ -29,31 +25,27 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "expect": "^1.20.2",
+    "immutability-helper": "^2.1.2",
+    "jest": "^23.6.0",
     "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.2.0",
-    "mock-local-storage": "^1.0.2",
-    "redux-mock-store": "^1.2.3",
-    "redux-observers": "^2.0.2",
-    "redux-thunk": "^2.2.0",
-    "sinon": "^4.1.2"
-  },
-  "dependencies": {
-    "immutability-helper": "^2.1.2",
     "lhc-js-lib": "^2.2.2",
+    "mock-local-storage": "^1.0.2",
     "path-to-regexp": "^1.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.6",
     "redux": "^3.6.0",
-    "redux-observers": "^2.0.1",
+    "redux-mock-store": "^1.2.3",
+    "redux-observers": "^2.0.2",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0"
-  }
+  },
+  "dependencies": {}
 }
