--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "presets": ["env", "react"],
-  "plugins": [
-    "transform-object-rest-spread",
-    ["babel-plugin-root-import", {}]
-  ]
+  "presets": ["env", "react"]
 }
