--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.16.2",
     "axios-mock-adapter": "^1.8.1",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
